# SE20

./: .gitignore  LICENSE  README.md  exefile_README.txt  main.py  pyproject.toml  setting_data.ini  test.py
unogame/: README.md  conftest.py  game.py  main.py  main.spec  message.py  multi_play.py  pause.py  setting_data.ini  single_play.py  stageB.py  test.py  test_1models.py  test_2main.py  test_3single.py  uno_test.py
unogame/models/: AI.py  AI_A.py  AI_B.py  AI_C.py  AI_D.py  Human.py  animation.py  button.py  card.py  event.py  player.py
unogame/network/: client.py  server.py
unogame/resources/images/achievement/: 건들지마세요.psd  건들지마세요2.psd  화살표.psd
unogame/resources/images/card/: mkdir.py
unogame/resources/images/storymode/: 건들지마세요.psd
unogame/utils/: __init__.py  achieveMenu.py  achievement.py  menu.py  multiMenu.py  setting_data.ini  settings.py  sound.py  stageA.py  stageB.py  stageC.py  stageD.py  storyMode.py  test.py  메모.txt  연습.py
